--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <!-- <script src="node_modules/reflect-metadata/Reflect.js"></script> -->
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/hammerjs/hammer.js"></script>
-    <!-- <script src="node_modules/underscore/underscore.js"></script> -->
-    
+    <script src="app/vendorjs/buffer-loader.js"></script>                 
     <script src="systemjs.config.js"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
