Heartbeat sound - keep tunecast alive

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <!-- <script src="node_modules/reflect-metadata/Reflect.js"></script> -->
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/hammerjs/hammer.js"></script>
-    <script src="app/vendorjs/buffer-loader.js"></script>                 
+    <script src="app/js/buffer-loader.js"></script>                 
     <script src="systemjs.config.js"></script>
     <script>
-      System.import('app').catch(function(err){ console.error(err); });
+      System.import('app').catch(function(err){ console.error(err); });   
     </script>
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+     <my-app>Loading AppComponent content here ...</my-app>
   </body>
 </html>
